// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageUpload shows an image upload and an error 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      name="imageSrc"
      tabindex="-1"
    >
      <label
        class="w-100 p-0"
        for="image-with-error"
      >
        Image Error Test
      </label>
        
      <div
        class="fade alert-content alert alert-danger show"
        role="alert"
      >
        <div
          class="pgn__alert-message-wrapper"
        >
          <div
            class="alert-message-content"
          >
            Required
          </div>
        </div>
      </div>
      <img
        alt=""
        class="uploaded-image"
      />
      <input
        accept="image/jpeg, image/png"
        id="image-with-error"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`ImageUpload shows an image upload with no prior image 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      name="imageSrc"
      tabindex="-1"
    >
      <label
        class="w-100 p-0"
        for="image-no-prior"
      >
        Course Image: *
      </label>
        
      <img
        alt=""
        class="uploaded-image"
      />
      <input
        accept="image/jpeg, image/png"
        id="image-no-prior"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`ImageUpload shows an image upload with prior image 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      name="imageSrc"
      tabindex="-1"
    >
      <label
        class="w-100 p-0"
        for="image-with-prior"
      >
        <strong>
          Course Image: *
        </strong>
      </label>
        
      <img
        alt=""
        class="uploaded-image"
        src="http://www.image.uploaded.source/view/image"
      />
      <input
        accept="image/jpeg, image/png"
        id="image-with-prior"
        type="file"
      />
    </div>
  </div>
</div>
`;
